feat: add `created_at` and `published` to news

--- a/src/content/news/2014-03-24-3-laenderlauf-2014.md
+++ b/src/content/news/2014-03-24-3-laenderlauf-2014.md
@@ -2,6 +2,8 @@
 title: 3-Länderlauf 2014
 slug: 3-laenderlauf-2014
 excerpt: Bereits zum 5. Mal haben die Regiolions am Sonntag, den 25.5.2014 das Patronat über den 3Länderlauf übernommen und die Verpflegung auf dem Marktplatz organisiert und durchführt. Mit dem Erlös dieser Veranstaltung werden Ferienlager für Kinder aus allen 3 Ländern im Sommer 2014 in Zusammenarbeit mit dem Leo Club Weil am Rhein organisiert.
+published: true
+created_at: 2014-03-24
 ---
 
 Bei strahlendem Wetter konnte diesmal ein Teilnehmerrekord von 1386 Läufern aufgestellt werden. Dank der Hilfe von zahlreichen Lionsfreunden aus allen 3 Ländern wurde der 3Länderlauf ein voller Erfolg.
