--- a/src/content/news/2010-05-16-3-laenderlauf-2010.md
+++ b/src/content/news/2010-05-16-3-laenderlauf-2010.md
@@ -2,6 +2,8 @@
 title: 3-Länderlauf 2010
 slug: 3-laenderlauf-2010
 excerpt: Am 16. Mai 2010 fand in Basel zum 20. Mal der trinationale 3-Länderlauf statt (www.3laenderlauf.org oder www.course3pays.org).
+published: true
+created_at: 2010-05-16
 ---
 
 Neue Patronatsgeber des Laufs sind elf Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz. Es handelt sich nach unserem Wissen um eine Art „Weltpremiere“, dass einzelne Lions Clubs als Teile der weltumspannenden Organisation über Ländergrenzen hinweg eine gemeinsame Activity mit dem Ziel des Fundraisings betreiben.
