--- a/src/content/news/2011-05-22-3-laenderlauf-2011.md
+++ b/src/content/news/2011-05-22-3-laenderlauf-2011.md
@@ -2,6 +2,8 @@
 title: 3-Länderlauf 2011
 slug: 3-laenderlauf-2011
 excerpt: Am 22. Mai 2011 fand in Basel zum 21. Mal der trinationale 3-Länderlauf statt. Zwölf Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen.
+published: true
+created_at: 2011-05-22
 ---
 
 Der Erlös dieser Benefizveranstaltung wird eingesetzt für zwei Ferienlager für Kinder aus allen 3 Ländern die zusammen mit den Leos aus Weil am Rhein und der TRUZ (Trinationales Umweltzentrum Weil) organisiert werden.
