--- a/src/content/news/2012-05-20-3-laenderlauf-2012.md
+++ b/src/content/news/2012-05-20-3-laenderlauf-2012.md
@@ -2,6 +2,8 @@
 title: 3-Länderlauf 2012
 slug: 3-laenderlauf-2012
 excerpt: Am 20. Mai 2012 fand in Basel zum 22. Mal der trinationale 3-Länderlauf statt. Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen.
+published: true
+created_at: 2012-05-20
 ---
 
 Der Erlös dieser Benefizveranstaltung wird eingesetzt für Ferienlager für Kinder aus allen 3 Ländern, die zusammen mit den Leos aus Weil am Rhein organisiert werden.
