--- a/src/content/news/2015-05-22-3-laenderlauf-2015.md
+++ b/src/content/news/2015-05-22-3-laenderlauf-2015.md
@@ -2,4 +2,6 @@
 title: 3-Länderlauf 2015
 slug: 3laenderlauf-2015
 excerpt: Am 17. Mai 2015 fand in Basel zum 25. Mal der trinationale 3-Länderlauf statt. Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen. Mit dem Erlös dieser Benefizveranstaltung werden Ferienlager für Kinder aus allen 3 Ländern im Sommer 2015 organisiert.
+published: true
+created_at: 2015-05-22
 ---
