--- a/src/content/news/2016-05-22-3-laenderlauf-2016.md
+++ b/src/content/news/2016-05-22-3-laenderlauf-2016.md
@@ -2,4 +2,6 @@
 title: 3-Länderlauf 2016
 slug: 3laenderlauf-2016
 excerpt: Am 22.5.2016 fand in Basel zum 26. Mal der trinationale 3-Länderlauf statt. Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz hatten auch dieses Jahr das Patronat übernommen. Mit dem Erlös dieser Benefizveranstaltung wurden Ferienlager für Kinder aus allen 3 Ländern im Sommer 2016 organisiert.
+published: true
+created_at: 2016-05-22
 ---
