--- a/src/content/news/2019-08-19-3-laenderlauf-2020.md
+++ b/src/content/news/2019-08-19-3-laenderlauf-2020.md
@@ -2,4 +2,6 @@
 title: 3-Länderlauf 2020
 slug: 3-laenderlauf-2020
 excerpt: Der 30. 3-Länderlauf wird erst im nächsten Jahr im Mai wieder stattfinden sobald wir ein Datum gefunden haben. Provisorisch So, 16. Mai 2021. Wir wünschen euch viel Gesundheit und bleibt zu Hause. Viele sportliche Grüsse sendet euch das gesamte OK-Team 3-Länderlauf.
+published: true
+created_at: 2019-08-19
 ---
