--- a/src/content/news/2019-08-19-bebbi-sy-jazz-2019.md
+++ b/src/content/news/2019-08-19-bebbi-sy-jazz-2019.md
@@ -2,4 +2,6 @@
 title: Regio Lions bei Em Bebbi sy Jazz! in Basel
 slug: bebbi-sy-jazz-2019
 excerpt: Zum ersten Mal hatten die Regio Lions 2019 einen Stand bei "Em Bebbi sy Jazz!".
+published: true
+created_at: 2019-08-19
 ---
