--- a/src/content/news/2023-01-10-3-laenderlauf-2023.md
+++ b/src/content/news/2023-01-10-3-laenderlauf-2023.md
@@ -2,6 +2,8 @@
 title: 3-Länderlauf 2023
 slug: 3-laenderlauf-2023
 excerpt: Der einzigartige Lauf zwischen der Schweiz (Basel), Frankreich (St.Louis, Huningue) und Deutschland (Weil am Rhein).  Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen und sie haben für das Catering auf dem Marktplatz in Basel gesorgt.
+published: true
+created_at: 2023-01-10
 ---
 
 Mit dem Erlös dieser Benefizveranstaltung konnte wieder ein Ferienlager für Kinder aus allen 3 Ländern organisiert werden.
