--- a/src/content/news/2015-05-22-3-laenderlauf-2015.md
+++ b/src/content/news/2015-05-22-3-laenderlauf-2015.md
@@ -4,4 +4,11 @@ slug: 3laenderlauf-2015
 excerpt: Am 17. Mai 2015 fand in Basel zum 25. Mal der trinationale 3-Länderlauf statt. Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen. Mit dem Erlös dieser Benefizveranstaltung werden Ferienlager für Kinder aus allen 3 Ländern im Sommer 2015 organisiert.
 published: true
 created_at: 2015-05-22
+image:
+  src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2015/BadischeZeitung18052015S21.jpg?updatedAt=1707159683332
+gallery:
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2015/LAlsace19052015S23.jpg?updatedAt=1707159683374
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2015/Oberbadische18052015.jpg?updatedAt=1707159683305
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2015/BadischeZeitung18052015S33.jpg?updatedAt=1707159683280
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2015/BadischeZeitung18052015S27.jpg?updatedAt=1707159682791
 ---
