--- a/src/content/news/2012-05-20-3-laenderlauf-2012.md
+++ b/src/content/news/2012-05-20-3-laenderlauf-2012.md
@@ -4,11 +4,15 @@ slug: 3-laenderlauf-2012
 excerpt: Am 20. Mai 2012 fand in Basel zum 22. Mal der trinationale 3-Länderlauf statt. Lions Clubs aus Südbaden, dem Süd-Elsass und der Nordwest-Schweiz haben auch dieses Jahr das Patronat übernommen.
 published: true
 created_at: 2012-05-20
+image:
+  src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2012/02-DSC06281.jpeg?updatedAt=1707159406180
 ---
 
 Der Erlös dieser Benefizveranstaltung wird eingesetzt für Ferienlager für Kinder aus allen 3 Ländern, die zusammen mit den Leos aus Weil am Rhein organisiert werden.
 
 Unter den Teilnehmern am Schülerlauf wurde ein Mountainbike verlost, welches der 11 Jahre alte Nils Ehrentraut aus der Fridolin Grundschule Lörrach gewonnen hat.
+
+![](https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2012/03-DSC06288.jpeg?updatedAt=1707159406157)
 
 Als Highlight wurde eine Tombola veranstaltet, bei der ein Peugeot 107 gewonnen werden konnte. Dieses Auto wurde vom Autohaus Golz in Binzen an die Regio-Lions gestiftet.
 
