--- a/src/content/news/2013-05-05-3-laenderlauf-2013.md
+++ b/src/content/news/2013-05-05-3-laenderlauf-2013.md
@@ -4,4 +4,6 @@ slug: 3-laenderlauf-2013
 excerpt: Bereits zum 4. Mal haben die Regiolions am Sonntag, den 26.5.2013 das Patronat über den 3Länderlauf übernommen. Mit dem Erlös dieser Benefizveranstaltung wurde ein Ferienlager für Kinder aus allen 3 Ländern im August 2013 in Zusammenarbeit mit dem Leo Club Weil am Rhein organisiert.
 published: true
 created_at: 2013-05-05
+image:
+  src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2013/3laenderlauf2013.jpg?updatedAt=1707158902078
 ---
