--- a/src/content/news/2019-08-19-bebbi-sy-jazz-2019.md
+++ b/src/content/news/2019-08-19-bebbi-sy-jazz-2019.md
@@ -4,4 +4,22 @@ slug: bebbi-sy-jazz-2019
 excerpt: Zum ersten Mal hatten die Regio Lions 2019 einen Stand bei "Em Bebbi sy Jazz!".
 published: true
 created_at: 2019-08-19
+image:
+  src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-03.jpg?updatedAt=1707155804512
+gallery:
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-01.jpg?updatedAt=1707155804929
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-02.jpg?updatedAt=1707155804147
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-04.jpg?updatedAt=1707155803810
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-05.jpg?updatedAt=1707155803507
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-06.jpg?updatedAt=1707155803484
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-07.jpg?updatedAt=1707155803475
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-08.jpg?updatedAt=1707155803300
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-09.jpg?updatedAt=1707155802122
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-10.jpg?updatedAt=1707155801294
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-11.jpg?updatedAt=1707155799898
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-12.jpg?updatedAt=1707155799333
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-14.jpg?updatedAt=1707155797346
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-13.jpg?updatedAt=1707155797129
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-15.jpg?updatedAt=1707155794352
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2019/Regiolions_20Bebbi_20sy_20Jazz_202019-16.jpg?updatedAt=1707155794330
 ---
