--- a/src/content/news/2021-08-16-bebbi-sy-jazz-2022.md
+++ b/src/content/news/2021-08-16-bebbi-sy-jazz-2022.md
@@ -4,4 +4,8 @@ slug: bebbi-sy-jazz-2022
 excerpt: Am Freitag, den 19. August 2022 findet in Basel das traditionelle em Bebbi sy Jazz statt, bei dem auch die Regio-Lions wieder einen Stand im Hof zum grünen Helm am Gemsberg haben. Wir alle hoffen auf ein schönes Fest in (fast) alter Normalität!
 published: true
 created_at: 2021-08-16
+image:
+  src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2021/ebsj2018_selektion_pk_-_52.jpg?updatedAt=1707076145325
+gallery:
+  - src: https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2021/Regiolions%20Bebbi%20sy%20Jazz%202019-03.jpg?updatedAt=1707076144711
 ---
