content: add captions, videos

--- a/src/content/news/2010-05-16-3-laenderlauf-2010.md
+++ b/src/content/news/2010-05-16-3-laenderlauf-2010.md
@@ -10,4 +10,4 @@ Neue Patronatsgeber des Laufs sind elf Lions Clubs aus Südbaden, dem Süd-Elsas
 
 Aus dem Ertrag des Laufs als Benefiz-Veranstaltung wurde ein trinationales Ferienlager für Kinder aus den drei Ländern am Oberrhein finanziert. Die Organisation dieses Lagers mit Schwerpunkt Umweltbildung, wurde das TRUZ übernehmen (www.truz.org).
 
-Hier sehen Sie eine Auswahl von Bildern, die Walter Taeschner (LC Lörrach) am 16.5.2010 beim 3Länderlauf gemacht hat.
+Hier sehen Sie eine Auswahl von Bildern, die Walter Taeschner (LC Lörrach) am 16.5.2010 beim 3-Länderlauf gemacht hat.
