--- a/src/content/news/2023-01-10-3-laenderlauf-2023.md
+++ b/src/content/news/2023-01-10-3-laenderlauf-2023.md
@@ -10,4 +10,13 @@ image:
 
 Mit dem Erlös dieser Benefizveranstaltung konnte wieder ein Ferienlager für Kinder aus allen 3 Ländern organisiert werden.
 
-Weitere Informationen unter www.3laenderlauf.org
+Weitere Informationen unter [www.3laenderlauf.org](www.3laenderlauf.org)
+
+Anbei können Sie sich zwei Videos zum Dreiländerlauf anschauen:
+
+<video controls width="640" height="358">
+  <source type="video/mp4" src="https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2023/3llauf2014.mp4">
+</video>
+<video controls width="400" height="224">
+  <source type="video/mp4" src="https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2023/3Laenderlauf-Video.mp4">
+</video>
