--- a/src/content/news/2013-05-05-3-laenderlauf-2013.md
+++ b/src/content/news/2013-05-05-3-laenderlauf-2013.md
@@ -1,7 +1,7 @@
 ---
 title: 3-Länderlauf 2013
 slug: 3-laenderlauf-2013
-excerpt: Bereits zum 4. Mal haben die Regiolions am Sonntag, den 26.5.2013 das Patronat über den 3Länderlauf übernommen. Mit dem Erlös dieser Benefizveranstaltung wurde ein Ferienlager für Kinder aus allen 3 Ländern im August 2013 in Zusammenarbeit mit dem Leo Club Weil am Rhein organisiert.
+excerpt: Bereits zum 4. Mal haben die Regiolions am Sonntag, den 26.5.2013 das Patronat über den 3-Länderlauf übernommen. Mit dem Erlös dieser Benefizveranstaltung wurde ein Ferienlager für Kinder aus allen 3 Ländern im August 2013 in Zusammenarbeit mit dem Leo Club Weil am Rhein organisiert.
 published: true
 created_at: 2013-05-05
 image:
